# rubberbandAndroidImplementation

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/rubberbandimplementation/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Allocators.h  CMakeLists.txt  RubberBandStretcher.h  native-lib.cpp
app/src/main/java/com/example/rubberbandimplementation/: CustomRubberBandAudioProcessor.java  MainActivity.kt  RubberBandAudioProcessor.kt  RubberBandAudioProcessorChain.java  RubberBandProcessor.kt  RubberBandStretcher.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/rubberbandimplementation/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
